--- a/config/vision_model/biomed_vit_xr_seq.yaml
+++ b/config/vision_model/biomed_vit_xr_seq.yaml
@@ -1,5 +1,5 @@
 encoder:
-  _target_: transformers.AutoModel.from_pretrained
+  _target_: models.modeling_vitxrs.ViTXRSModel.from_pretrained
   _args_:
     - biomed_vit_xr_seq
   trust_remote_code: true
